# LoboFEMCmake

./: .gitignore  CMakeLists.txt  Readme.md  imgui.ini  run.sh  test.txt
cmake/: 3rdparty.cmake  (+2 more)
src/LoboFEM/: CMakeLists.txt  LoboFEM.cpp  LoboFEM.h  cublasmain.cpp  cudamain.cu.back  main copy.back  main..cpp.back2  main.cpp  main_mkl.cpp  main_mkl.cpp.back  maintest.cpp.back
src/LoboFEM/AutoDiff/: AutoDiffCore.h  LoboComplex.h
src/LoboFEM/CUDA/libcumatrix/: device_matrix.cu  device_matrix.h
src/LoboFEM/Collision/CollisionDector/: BVHCollisionDetector.h  BVHTriModel.cpp  CollisionWorld.cpp
src/LoboFEM/Functions/: LoboMacros.h  computeSVDMatrix3d.cpp  computeTriangle.cpp  computeTriangle.h  deleteSTDvector.h  parseString.h
src/LoboFEM/LoboDynamic/: LoboDynamic.h  LoboDynamicScene.cpp  LoboDynamicScene.h
src/LoboFEM/LoboDynamic/Demos/: DemoDinosaurAE.h  LoboDemos.h
src/LoboFEM/LoboDynamic/LoboDynamicSolver/: DynamicSimulator.cpp  DynamicSimulator.h  DynamicSolver.cpp  DynamicSolver.h
src/LoboFEM/LoboDynamic/LoboKeras/: LoboKerasModel.cpp  LoboKerasModel.h
src/LoboFEM/LoboImGui/: MainWindow.cpp  MainWindow.h
src/LoboFEM/LoboMesh/: LoboMesh.cpp  LoboMesh.h
src/LoboFEM/LoboVolumtricMesh/: LoboTetMesh.cpp  LoboTetMesh.h
src/LoboFEM/Loboimgui/: MainWindow.cpp  MainWindow.h
src/LoboFEM/OpenGLutils/: LoboCamera.cpp  LoboCamera.h  LoboScene.cpp  LoboScene.h  glfunctions.h
src/LoboFEM/Shaders/: LoboLighting.cpp  LoboLighting.h  LoboShader.cpp  LoboShader.h
src/LoboFEM/Utils/: glmEigenConverter.h
src/LoboFEM/VolumetricMesh/: MyClass.cpp  MyClass.h
(+125 files in other folders)
